testProject/python/errorPython/OutputFile/err.txt
  File "E:\BuilderProject\testProject\python\errorPython\error.py", line 125
    aegagasdga¶ö°¡·ç¸ñ°¡£»
                   ^
SyntaxError: invalid character '£»' (U+FF1B)
